--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Ha Thuy Chi</title>
   </head>
   <body>
-    
+    <h1>Thia is a heading 1</h1>
+    <h2>Team profile:</h2>
+    <h3>First member</h3>
+    <h2>Project description:</h2>
+    <h3>Overview</h3>
+    <h6>This is a heading 6</h6>
   </body>
 </html>
