Adding a paragraph to index.html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h3>First member</h3>
     <h2>Project description:</h2>
     <h3>Overview</h3>
+    <p>This is the requirement of the Overview</p>
     <h6>This is a heading 6</h6>
   </body>
 </html>
