--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Team profile:</h2>
     <p>Intro of the first member</p>
     <p>Intro of the second member</p>
-    <a href="https://www.w3schools.com/html/html_basic.asp">This is the link of the source</a>
+    <a href="https://www.w3schools.com/html/html_basic.asp">This is the link of the source<br></a>
     <img src="https://cdn2.iconfinder.com/data/icons/talent-management-11/64/collaborative-learning-teamwork-group-corporate-512.png" alt="" width="104" height="104">
     <h2>Project description:</h2>
     <h3>Overview</h3>
