--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Intro of the first member</p>
     <p>Intro of the second member</p>
     <a href="https://www.w3schools.com/html/html_basic.asp">This is the link of the source<br></a>
-    <img src="https://cdn2.iconfinder.com/data/icons/talent-management-11/64/collaborative-learning-teamwork-group-corporate-512.png" alt="" width="104" height="104">
+    <img src="https://cdn2.iconfinder.com/data/icons/talent-management-11/64/collaborative-learning-teamwork-group-corporate-512.png" alt="" width="200%" height="200%">
     <h2>Project description:</h2>
     <h3>Overview</h3>
     <p>This is the requirement of the Overview</p>
